--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -1,10 +1,11 @@
+/* $main: #fc5c57; */
 .aboutme {
   padding: 70px 50px 10px;
   font-family: "Raleway", sans-serif;
   display: flex;
 }
 .aboutme h2 {
-  border-left: 3px solid #fc5c57;
+  border-left: 3px solid #1c99fa;
   height: 35px;
   display: flex;
   align-items: center;
@@ -36,14 +37,14 @@
   overflow: hidden;
   color: white;
   font-weight: 600;
-  background-color: #fc5c57;
+  background-color: #1c99fa;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
   margin-top: 5px;
   display: inline-block;
   text-decoration: none;
-  transition: 0.3s;
+  transition: 0.25s;
 }
 .aboutme__personal a span {
   position: inherit;
@@ -54,7 +55,7 @@
   left: 0;
   top: -100%;
   content: "";
-  background-color: #ff8178;
+  background-color: #4db1ff;
   width: 100%;
   height: 100%;
   z-index: 1;
