--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,3 +1,4 @@
+/* $main: #fc5c57; */
 .contact {
   background-color: #000000e0;
   color: white;
@@ -45,30 +46,31 @@
 }
 .contact label input:focus,
 .contact label textarea:focus {
-  border-bottom: 1px solid #fc5c57;
+  border-bottom: 1px solid #1c99fa;
 }
 .contact button {
-  font-weight: 600;
-  margin-top: 5px;
-  border: none;
-  padding: 13px 25px;
-  display: inline-block;
-  width: 280px;
-  cursor: pointer;
-  font-family: "Raleway", sans-serif;
-  font-size: 1.7rem;
   position: relative;
   overflow: hidden;
   color: white;
   font-weight: 600;
-  background-color: #fc5c57;
+  background-color: #1c99fa;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
   margin-top: 5px;
   display: inline-block;
   text-decoration: none;
-  transition: 0.3s;
+  transition: 0.25s;
+  font-weight: 600;
+  margin-top: 5px;
+  border: none;
+  display: inline-block;
+  padding: 0;
+  width: 280px;
+  height: 50px;
+  cursor: pointer;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.9rem;
   /*     color: white;
    background-color: $main;
    text-decoration: none;
@@ -84,7 +86,7 @@
   left: 0;
   top: -100%;
   content: "";
-  background-color: #ff8178;
+  background-color: #4db1ff;
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -114,7 +116,7 @@
 }
 .contact li:hover i {
   font-size: 3.8rem;
-  color: #fc5c57;
+  color: #1c99fa;
 }
 
 /*# sourceMappingURL=contact.css.map */
