--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -54,16 +54,17 @@
   }
 
   button {
+    @include redButton();
     font-weight: 600;
     margin-top: 5px;
     border: none;
-    padding: 13px 25px;
     display: inline-block;
+    padding: 0;
     width: 280px;
+    height: 50px;
     cursor: pointer;
     font-family: $fontMain;
-    font-size: 1.7rem;
-    @include redButton();
+    font-size: 1.9rem;
     span {
       @include redButtonSpan();
     }
