--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+/* $main: #fc5c57; */
 * {
   margin: 0;
   padding: 0;
@@ -11,7 +12,7 @@ html {
 
 body {
   font-family: "Raleway", sans-serif;
-  background-color: #f7f7f7;
+  background-color: #f5f5f5;
 }
 
 .responsive-title {
