--- a/styles/habilities.scss
+++ b/styles/habilities.scss
@@ -12,7 +12,7 @@
     display: grid;
     margin-top: 30px;
     grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+    gap: 40px;
     list-style: none;
   }
 
@@ -22,13 +22,14 @@
     text-align: center;
     display: flex;
     flex-direction: column;
+    position: relative;
     @include lightShadow();
 
     div {
       font-size: 2rem;
-      background-color: #3434342b;
+      background-color: $main;
+      color: white;
       border-radius: 50%;
-      // padding: 15px 13px;
       width: 68px;
       height: 67px;
       margin: 0 auto;
@@ -38,48 +39,30 @@
     }
   }
 
+  li::before {
+    content: '';
+    height: 3px;
+    background-color: $main;
+    width: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    border-radius: 15%;
+  }
+
   h3 {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     font-weight: 700;
     margin: 8px 0 10px;
   }
 
   p {
-    font-size: 1.3rem;
-    line-height: 2rem;
+    font-size: 1.4rem;
+    line-height: 2.4rem;
   }
 }
 
 .icon-big {
   font-size: 3rem;
 }
-// .habilities {
-//   padding: 25px;
-//   color: $dark;
-
-//   .habilities__title {
-//     padding-bottom: 25px;
-//   }
-
-//   ul {
-//     display: grid;
-//     grid-template-columns: 1fr;
-//     grid-auto-rows: 150px;
-//     gap: 20px;
-//     justify-items: center;
-//   }
-
-//   li {
-//     color: white;
-//     background-color: $dark;
-//     padding: 20px;
-//     line-height: 2.7rem;
-//     font-size: 1.7rem;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     width: 100%;
-//     text-align: center;
-//     @include darkShadow();
-//   }
-// }
