--- a/styles/header.css
+++ b/styles/header.css
@@ -1,27 +1,29 @@
+/* $main: #fc5c57; */
 .header {
-  height: 500px;
+  height: 100vh;
   padding: 25px;
-  background-color: #1c1c1cdb;
+  /* background-color: #1c1c1cdb; */
+  background-color: rgba(0, 0, 0, 0.849);
   position: relative;
   color: white;
 }
 .header__top {
-  height: 40px;
+  height: 60px;
   display: flex;
   justify-content: space-between;
-}
-.header__top-title {
-  display: flex;
   align-items: center;
 }
 .header__top-title img {
   width: 30px;
   height: 30px;
   margin-right: 10px;
+  transition: 0.6s;
 }
 .header__top-title a {
+  display: flex;
+  align-items: center;
   color: white;
-  font-size: 2.5rem;
+  font-size: 2.8rem;
   font-family: "Raleway", sans-serif;
   text-decoration: none;
   letter-spacing: 0.7rem;
@@ -34,7 +36,7 @@
 }
 .header .nav__list-item {
   margin-left: 20px;
-  font-size: 1.4rem;
+  font-size: 1.7rem;
   font-family: "Raleway", sans-serif;
   font-weight: 600;
 }
@@ -44,8 +46,8 @@
   transition: 0.4s;
 }
 .header .nav__list-item a:hover {
-  font-size: 1.8rem;
-  color: #fc5c57;
+  font-size: 2.1rem;
+  color: #1c99fa;
 }
 .header__image--bg {
   position: absolute;
@@ -54,9 +56,10 @@
   top: 0;
   left: 0;
   z-index: -1;
+  opacity: 0;
 }
 .header__hero {
-  height: 410px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -70,12 +73,12 @@
   margin-top: -55px;
 }
 .header__hero h1 {
-  font-size: 3rem;
+  font-size: 4rem;
   font-family: "Raleway", sans-serif;
   letter-spacing: 0.2rem;
 }
 .header__hero p {
-  font-size: 1.3rem;
+  font-size: 1.6rem;
   letter-spacing: 0.4rem;
   margin-top: 7px;
   text-align: center;
@@ -87,6 +90,11 @@
 }
 .header__closer {
   display: none;
+}
+
+.opacity-img {
+  opacity: 1;
+  transition: 0.4s;
 }
 
 /*# sourceMappingURL=header.css.map */
