--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,3 +1,4 @@
+/* $main: #fc5c57; */
 .projects {
   padding: 40px 50px;
 }
@@ -25,7 +26,7 @@
 }
 .projects__item-description {
   padding: 20px;
-  width: 50%;
+  width: 58%;
 }
 .projects__item-description h3 {
   font-size: 3rem;
@@ -38,30 +39,27 @@
   margin: 3px 0 15px;
 }
 .projects__item-description p {
-  font-size: 1.4em;
-  line-height: 2.1rem;
+  font-size: 1.6em;
+  line-height: 2.3rem;
 }
 .projects__item-description-buttons {
   width: 100%;
   text-align: center;
-  margin-top: 10px;
-  /* a:hover {
-    @include redButtonHover();
-  } */
+  margin-top: 17px;
 }
 .projects__item-description-buttons a {
   position: relative;
   overflow: hidden;
   color: white;
   font-weight: 600;
-  background-color: #fc5c57;
+  background-color: #1c99fa;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
   margin-top: 5px;
   display: inline-block;
   text-decoration: none;
-  transition: 0.3s;
+  transition: 0.25s;
 }
 .projects__item-description-buttons a span {
   position: inherit;
@@ -72,7 +70,7 @@
   left: 0;
   top: -100%;
   content: "";
-  background-color: #ff8178;
+  background-color: #4db1ff;
   width: 100%;
   height: 100%;
   z-index: 1;
