--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -7,9 +7,11 @@
 
 $primary: #1e2233;
 $secondary: #24273d;
-$main: #fc5c57;
+$main: #1c99fa;
+/* $main: #fc5c57; */
 $fontLogo: 'Raleway', sans-serif;
 $fontMain: 'Raleway', sans-serif;
+$fontRoboto: 'Roboto', sans-serif;
 $gray: #34343480;
 
 @mixin darkShadow($color: rgba(0, 0, 0, 0.28)) {
@@ -36,7 +38,7 @@ $gray: #34343480;
   margin-top: 5px;
   display: inline-block;
   text-decoration: none;
-  transition: 0.3s;
+  transition: 0.25s;
 }
 
 @mixin redButtonSpan() {
@@ -49,7 +51,7 @@ $gray: #34343480;
   left: 0;
   top: -100%;
   content: '';
-  background-color: #ff8178;
+  background-color: #4db1ff;
   width: 100%;
   height: 100%;
   z-index: 1;
