--- a/styles/module.css
+++ b/styles/module.css
@@ -275,7 +275,7 @@ body {
   color: #34343480;
 }
 .projects__container {
-  padding: 40px 50px;
+  padding: 40px 0;
 }
 .projects__item {
   display: flex;
