--- a/styles/breakpoints/mobile-l.css
+++ b/styles/breakpoints/mobile-l.css
@@ -23,4 +23,26 @@
   font-size: 3.2rem;
 }
 
+.projects__item-description {
+  padding: 15px;
+}
+.projects__item-description h3 {
+  font-size: 2.2rem;
+}
+.projects__item-description h4 {
+  font-size: 1.2rem;
+}
+.projects__item-description p {
+  font-size: 1.3rem;
+  line-height: 2rem;
+}
+.projects__item-description a {
+  padding: 15px 8px;
+  font-size: 1.3rem;
+}
+
+.contact button {
+  padding-top: 0;
+}
+
 /*# sourceMappingURL=mobile-l.css.map */
