--- a/styles/breakpoints/mobile-l.scss
+++ b/styles/breakpoints/mobile-l.scss
@@ -35,3 +35,30 @@
     }
   }
 }
+
+.projects {
+  &__item-description {
+    padding: 15px;
+    h3 {
+      font-size: 2.2rem;
+    }
+    h4 {
+      font-size: 1.2rem;
+    }
+    p {
+      font-size: 1.3rem;
+      line-height: 2rem;
+    }
+
+    a {
+      padding: 15px 8px;
+      font-size: 1.3rem;
+    }
+  }
+}
+
+.contact {
+  button {
+    padding-top: 0;
+  }
+}
