--- a/styles/breakpoints/tablet.css
+++ b/styles/breakpoints/tablet.css
@@ -147,10 +147,12 @@
 }
 .aboutme__description ul li {
   font-size: 1.3rem;
+  line-height: 2.3rem;
+  margin: 15px 0;
 }
 .aboutme__description ul a {
   display: block;
-  width: 150px;
+  width: 160px;
   text-align: center;
 }
 .aboutme__objectives {
@@ -167,7 +169,7 @@
 
 /*_______________Habilities________________*/
 .habilities {
-  padding: 30px 15px 0;
+  padding: 30px 35px 0;
 }
 .habilities h2 {
   font-size: 2.2rem;
@@ -177,9 +179,46 @@
 }
 
 /*_______________Proyects________________*/
+.projects {
+  padding: 40px 20px 0;
+}
+.projects__container {
+  padding-bottom: 0;
+}
+.projects__item {
+  padding: 0;
+}
+.projects__item-description {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffffeb;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.projects__item-description h4 {
+  font-size: 1.4rem;
+  margin-top: 8px;
+}
+.projects__item-description p {
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+}
+.projects__item-description a {
+  font-size: 1.5rem;
+  padding: 15px 28px;
+}
+.projects__item-image {
+  display: none;
+  width: 100%;
+  height: 100%;
+}
+
 /*_______________Contact________________*/
 .contact {
   margin-top: 40px;
+  padding: 40px 30px;
 }
 .contact h3 {
   text-align: center;
