--- a/styles/breakpoints/tablet.css
+++ b/styles/breakpoints/tablet.css
@@ -28,25 +28,44 @@
   height: 100vh;
   display: grid;
   z-index: 10;
-  grid-template-rows: 0.4fr 0.8fr 0.5fr;
+  grid-template-rows: 170px 1fr 0;
   padding: 0;
   background-color: #f7f7f7;
 }
 .header__top {
   height: auto;
+  width: 100%;
+}
+.header__top .nav {
+  height: 100%;
+  width: 100%;
 }
 .header__top .nav__list {
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: initial;
-  padding-left: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 20px;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
 }
 .header__top .nav__list-item {
   font-size: 1.6rem;
+  width: 100%;
+  height: 100%;
   margin: 0;
+  background-color: #1c1c1c;
+  border-radius: 20px;
 }
 .header__top .nav__list-item a {
-  color: black;
+  color: white;
+  display: block;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.8rem;
 }
 .header__top-title {
   display: none;
@@ -60,6 +79,7 @@
   grid-template-columns: 80px 1fr;
   grid-template-rows: 1fr;
   background-color: #1c1c1cdb;
+  /* border: 1px solid blue; */
 }
 .header__hero-img {
   display: flex;
@@ -87,14 +107,14 @@
   font-size: 1.3rem;
 }
 .header__activators {
-  background-color: #fc5c57ab;
-  width: 60px;
-  height: 60px;
+  background-color: #1c99faa6;
+  width: 75px;
+  height: 75px;
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  bottom: 20px;
+  right: 20px;
   color: white;
-  font-size: 2.5rem;
+  font-size: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -103,16 +123,19 @@
 }
 .header .nav__list a a:hover {
   color: white;
-  border-bottom: 1px solid white;
 }
 .header__closer {
   display: flex;
   justify-content: center;
-  align-items: center;
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  justify-content: flex-end;
 }
 .header__closer div {
-  border: 2px solid #1c99fa;
-  color: #1c99fa;
+  background-color: #1c99faa6;
+  margin-right: 20px;
+  color: white;
   width: 70px;
   height: 70px;
   display: flex;
@@ -120,6 +143,9 @@
   justify-content: center;
   border-radius: 100px;
   font-size: 3rem;
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
 }
 
 .activate__header {
@@ -127,7 +153,10 @@
 }
 
 .header__image--bg {
-  display: none;
+  /* display: none; */
+  position: absolute;
+  object-fit: cover;
+  height: 170px;
 }
 
 /*_______________About me________________*/
@@ -165,11 +194,12 @@
 }
 .aboutme__objectives ul li {
   font-size: 1.3rem;
+  line-height: 2.3rem;
 }
 
 /*_______________Habilities________________*/
 .habilities {
-  padding: 30px 35px 0;
+  padding: 40px 20px 0;
 }
 .habilities h2 {
   font-size: 2.2rem;
@@ -219,6 +249,9 @@
 .contact {
   margin-top: 40px;
   padding: 40px 30px;
+}
+.contact h2 {
+  font-size: 2.3rem;
 }
 .contact h3 {
   text-align: center;
