--- a/styles/breakpoints/tablet.scss
+++ b/styles/breakpoints/tablet.scss
@@ -29,23 +29,41 @@
   height: 100vh;
   display: grid;
   z-index: 10;
-  // grid-template-rows: 210px 1.5fr 1fr;
-  grid-template-rows: 0.4fr 0.8fr 0.5fr;
+  grid-template-rows: 170px 1fr 0;
   padding: 0;
   background-color: #f7f7f7;
 
   &__top {
     height: auto;
+    width: 100%;
+    .nav {
+      height: 100%;
+      width: 100%;
+    }
     .nav__list {
-      flex-direction: column;
-      justify-content: space-evenly;
-      align-items: initial;
-      padding-left: 30px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      gap: 20px;
+      width: 100%;
+      height: 100%;
+      padding: 20px;
       &-item {
         font-size: 1.6rem;
+        width: 100%;
+        height: 100%;
         margin: 0;
+        background-color: #1c1c1c;
+        border-radius: 20px;
         a {
-          color: black;
+          color: white;
+          display: block;
+          width: 100%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 1.8rem;
         }
       }
     }
@@ -63,6 +81,7 @@
     grid-template-columns: 80px 1fr;
     grid-template-rows: 1fr;
     background-color: #1c1c1cdb;
+    /* border: 1px solid blue; */
 
     &-img {
       display: flex;
@@ -94,14 +113,14 @@
   }
 
   &__activators {
-    background-color: #fc5c57ab;
-    width: 60px;
-    height: 60px;
+    background-color: #1c99faa6;
+    width: 75px;
+    height: 75px;
     position: fixed;
-    bottom: 10px;
-    right: 10px;
+    bottom: 20px;
+    right: 20px;
     color: white;
-    font-size: 2.5rem;
+    font-size: 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -112,17 +131,21 @@
   .nav__list {
     a a:hover {
       color: white;
-      border-bottom: 1px solid white;
     }
   }
 
   &__closer {
     display: flex;
     justify-content: center;
-    align-items: center;
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    justify-content: flex-end;
+
     div {
-      border: 2px solid $main;
-      color: $main;
+      background-color: #1c99faa6;
+      margin-right: 20px;
+      color: white;
       width: 70px;
       height: 70px;
       display: flex;
@@ -130,6 +153,7 @@
       justify-content: center;
       border-radius: 100px;
       font-size: 3rem;
+      @include darkShadow();
     }
   }
 }
@@ -139,7 +163,10 @@
 }
 
 .header__image--bg {
-  display: none;
+  /* display: none; */
+  position: absolute;
+  object-fit: cover;
+  height: 170px;
 }
 
 /*_______________About me________________*/
@@ -176,6 +203,7 @@
       padding: 0;
       li {
         font-size: 1.3rem;
+        line-height: 2.3rem;
       }
     }
   }
@@ -183,7 +211,7 @@
 
 /*_______________Habilities________________*/
 .habilities {
-  padding: 30px 35px 0;
+  padding: 40px 20px 0;
   h2 {
     font-size: 2.2rem;
   }
@@ -237,6 +265,10 @@
 .contact {
   margin-top: 40px;
   padding: 40px 30px;
+
+  h2 {
+    font-size: 2.3rem;
+  }
   h3 {
     text-align: center;
   }
