--- a/styles/breakpoints/tablet.css
+++ b/styles/breakpoints/tablet.css
@@ -1,4 +1,3 @@
-/* $main: #fc5c57; */
 .responsive-title {
   display: flex;
   background-color: #000000e0;
@@ -108,8 +107,8 @@
 }
 .header__activators {
   background-color: #1c99faa6;
-  width: 75px;
-  height: 75px;
+  width: 70px;
+  height: 70px;
   position: fixed;
   bottom: 20px;
   right: 20px;
@@ -120,6 +119,9 @@
   justify-content: center;
   border-radius: 100%;
   opacity: 1;
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
 }
 .header .nav__list a a:hover {
   color: white;
@@ -181,7 +183,7 @@
 }
 .aboutme__description ul a {
   display: block;
-  width: 160px;
+  width: 180px;
   text-align: center;
 }
 .aboutme__objectives {
