--- a/styles/breakpoints/tablet.scss
+++ b/styles/breakpoints/tablet.scss
@@ -15,7 +15,7 @@
   a {
     color: white;
     font-size: 2.5rem;
-    font-family: $fontLogo;
+    font-family: $fontTitles;
     text-decoration: none;
     letter-spacing: 0.7rem;
   }
@@ -114,8 +114,8 @@
 
   &__activators {
     background-color: #1c99faa6;
-    width: 75px;
-    height: 75px;
+    width: 70px;
+    height: 70px;
     position: fixed;
     bottom: 20px;
     right: 20px;
@@ -126,6 +126,7 @@
     justify-content: center;
     border-radius: 100%;
     opacity: 1;
+    @include darkShadow();
   }
 
   .nav__list {
@@ -188,7 +189,7 @@
       }
       a {
         display: block;
-        width: 160px;
+        width: 180px;
         text-align: center;
       }
     }
