--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,4 +1,3 @@
-/* $main: #fc5c57; */
 .contact {
   background-color: #000000e0;
   color: white;
@@ -42,7 +41,7 @@
   margin-top: 10px;
   height: 100px;
   resize: none;
-  font-family: "Raleway", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 .contact label input:focus,
 .contact label textarea:focus {
@@ -69,13 +68,8 @@
   width: 280px;
   height: 50px;
   cursor: pointer;
-  font-family: "Raleway", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 1.9rem;
-  /*     color: white;
-   background-color: $main;
-   text-decoration: none;
-   transition: 0.2s;
-  */
 }
 .contact button span {
   position: inherit;
