--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,3 @@
-/* $main: #fc5c57; */
 * {
   margin: 0;
   padding: 0;
@@ -11,12 +10,19 @@ html {
 }
 
 body {
-  font-family: "Raleway", sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #f5f5f5;
 }
 
 .responsive-title {
   display: none;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Raleway", sans-serif;
 }
 
 /*# sourceMappingURL=globals.css.map */
