--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,7 +12,6 @@ html {
 }
 
 body {
-  // font-size: 1.6rem;
   font-family: $fontMain;
   background-color: #f5f5f5;
 }
@@ -21,10 +20,9 @@ body {
   display: none;
 }
 
-h2 {
-  // text-align: center;
-  // font-size: 3.5rem;
-  // padding-bottom: 30px;
-  // font-weight: 100;
-  // color: white;
+h1,
+h2,
+h3,
+h4 {
+  font-family: $fontTitles;
 }
