--- a/styles/habilities.scss
+++ b/styles/habilities.scss
@@ -54,12 +54,13 @@
   h3 {
     font-size: 1.7rem;
     font-weight: 700;
-    margin: 8px 0 10px;
+    margin: 10px 0 12px;
   }
 
   p {
     font-size: 1.4rem;
     line-height: 2.4rem;
+    color: $texts;
   }
 }
 
