--- a/styles/header.scss
+++ b/styles/header.scss
@@ -24,7 +24,7 @@
         align-items: center;
         color: white;
         font-size: 2.8rem;
-        font-family: $fontLogo;
+        font-family: $fontTitles;
         text-decoration: none;
         letter-spacing: 0.7rem;
       }
@@ -40,7 +40,7 @@
       &-item {
         margin-left: 20px;
         font-size: 1.7rem;
-        font-family: $fontLogo;
+        font-family: $fontTitles;
         font-weight: 600;
         a {
           color: white;
@@ -81,7 +81,7 @@
 
     h1 {
       font-size: 4rem;
-      font-family: $fontLogo;
+      font-family: $fontTitles;
       letter-spacing: 0.2rem;
     }
 
