--- a/styles/module.css
+++ b/styles/module.css
@@ -1,4 +1,3 @@
-/* $main: #fc5c57; */
 * {
   margin: 0;
   padding: 0;
@@ -11,7 +10,7 @@ html {
 }
 
 body {
-  font-family: "Raleway", sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #f5f5f5;
 }
 
@@ -19,7 +18,13 @@ body {
   display: none;
 }
 
-/* $main: #fc5c57; */
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Raleway", sans-serif;
+}
+
 .header {
   height: 100vh;
   padding: 25px;
@@ -118,10 +123,9 @@ body {
   transition: 0.4s;
 }
 
-/* $main: #fc5c57; */
 .aboutme {
   padding: 70px 50px 10px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Open Sans", sans-serif;
   display: flex;
 }
 .aboutme h2 {
@@ -139,6 +143,7 @@ body {
   padding-right: 50px;
   line-height: 1.7rem;
   width: 50%;
+  color: #767676;
 }
 .aboutme__personal {
   margin-top: 15px;
@@ -191,13 +196,13 @@ body {
   list-style: none;
   padding-left: 5px;
   margin-top: 15px;
+  color: #767676;
 }
 .aboutme__objectives li {
   margin: 10px 0;
   font-size: 1.5rem;
 }
 
-/* $main: #fc5c57; */
 .habilities {
   padding: 40px 50px;
   max-width: 1500px;
@@ -253,18 +258,18 @@ body {
 .habilities h3 {
   font-size: 1.7rem;
   font-weight: 700;
-  margin: 8px 0 10px;
+  margin: 10px 0 12px;
 }
 .habilities p {
   font-size: 1.4rem;
   line-height: 2.4rem;
+  color: #767676;
 }
 
 .icon-big {
   font-size: 3rem;
 }
 
-/* $main: #fc5c57; */
 .projects {
   padding: 40px 50px;
 }
@@ -307,6 +312,7 @@ body {
 .projects__item-description p {
   font-size: 1.6em;
   line-height: 2.3rem;
+  color: #767676;
 }
 .projects__item-description-buttons {
   width: 100%;
@@ -355,7 +361,6 @@ body {
   object-fit: cover;
 }
 
-/* $main: #fc5c57; */
 .contact {
   background-color: #000000e0;
   color: white;
@@ -399,7 +404,7 @@ body {
   margin-top: 10px;
   height: 100px;
   resize: none;
-  font-family: "Raleway", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 .contact label input:focus,
 .contact label textarea:focus {
@@ -426,13 +431,8 @@ body {
   width: 280px;
   height: 50px;
   cursor: pointer;
-  font-family: "Raleway", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 1.9rem;
-  /*     color: white;
-   background-color: $main;
-   text-decoration: none;
-   transition: 0.2s;
-  */
 }
 .contact button span {
   position: inherit;
