--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,4 +1,3 @@
-/* $main: #fc5c57; */
 .projects {
   padding: 40px 50px;
 }
@@ -41,6 +40,7 @@
 .projects__item-description p {
   font-size: 1.6em;
   line-height: 2.3rem;
+  color: #767676;
 }
 .projects__item-description-buttons {
   width: 100%;
