--- a/styles/aboutme.scss
+++ b/styles/aboutme.scss
@@ -20,6 +20,9 @@
     line-height: 1.7rem;
     width: 50%;
     color: $texts;
+    opacity: 0;
+    transform: translateX(-300px);
+    transition: 1s ease-in-out all;
   }
 
   &__personal {
@@ -53,6 +56,9 @@
 
   &__objectives {
     width: 50%;
+    // opacity: 0;
+    transform: translateX(300px);
+    transition: 1s ease-in-out all;
     ul {
       list-style: none;
       padding-left: 5px;
