--- a/styles/header.css
+++ b/styles/header.css
@@ -63,6 +63,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  transform: translateY(200px);
+  transition: 1s ease-in-out all;
+  opacity: 0;
 }
 .header__hero img {
   width: 125px;
