--- a/styles/header.scss
+++ b/styles/header.scss
@@ -71,6 +71,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transform: translateY(200px);
+    transition: 1s ease-in-out all;
+    opacity: 0;
     img {
       width: 125px;
       height: 131px;
