--- a/styles/habilities.css
+++ b/styles/habilities.css
@@ -16,18 +16,21 @@
   gap: 40px;
   list-style: none;
 }
-.habilities li {
+.habilities .habilities__item {
   background-color: white;
   padding: 20px 15px;
   text-align: center;
   display: flex;
   flex-direction: column;
   position: relative;
+  transform: translateX(-300px);
+  opacity: 0;
+  transition: 1s ease-in-out all;
   -webkit-box-shadow: 1px 3px 5px 1px #0000000d;
   box-shadow: 1px 3px 5px 1px #0000000d;
   -moz-box-shadow: 1px 3px 5px 1px #0000000d;
 }
-.habilities li div {
+.habilities .habilities__item div {
   font-size: 2rem;
   background-color: #1c99fa;
   color: white;
@@ -39,7 +42,16 @@
   align-items: center;
   justify-content: center;
 }
-.habilities li::before {
+.habilities .a {
+  transition-delay: 1.5s;
+}
+.habilities .b {
+  transition-delay: 1s;
+}
+.habilities .c {
+  transition-delay: 0.5s;
+}
+.habilities .habilities__item::before {
   content: "";
   height: 3px;
   background-color: #1c99fa;
