--- a/styles/header.scss
+++ b/styles/header.scss
@@ -12,6 +12,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transform: translateX(-300px);
+    transition: 1s ease-in-out all;
+    opacity: 0;
     &-title {
       img {
         width: 30px;
