--- a/styles/intersections.scss
+++ b/styles/intersections.scss
@@ -1,3 +1,8 @@
+.moveHeaderTop {
+  transform: translateX(0px);
+  opacity: 1;
+}
+
 .moveHero {
   transform: translateY(0px);
   opacity: 1;
@@ -5,5 +10,17 @@
 
 .moveAboutme {
   transform: translateX(0px);
+  opacity: 1;
+}
+
+.habilities {
+  .moveHability {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+
+.moveProject {
+  transform: translateY(0px);
   opacity: 1;
 }
