--- a/styles/breakpoints/sm-laptop.scss
+++ b/styles/breakpoints/sm-laptop.scss
@@ -1,10 +1,24 @@
 .habilities {
   ul {
     grid-template-columns: repeat(2, 1fr);
-  }
+    &__item {
+      padding: 20px 15px;
+    }
+    .a {
+      transition-delay: 0.5s;
+    }
 
-  li {
-    padding: 20px 15px;
+    .b {
+      transition-delay: 0s;
+    }
+
+    .c {
+      transition-delay: 1.5s;
+    }
+
+    .d {
+      transition-delay: 1s;
+    }
   }
 }
 
