--- a/styles/habilities.scss
+++ b/styles/habilities.scss
@@ -16,7 +16,7 @@
     list-style: none;
   }
 
-  .habilities__item {
+  &__item {
     background-color: white;
     padding: 20px 15px;
     text-align: center;
