--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -35,7 +35,11 @@
   font-size: 1.5rem;
   line-height: 2.1rem;
 }
-.aboutme__personal a {
+.aboutme__personal li a {
+  color: #1c99fa;
+  text-decoration: none;
+}
+.aboutme__personal .nav__list-item-link {
   position: relative;
   overflow: hidden;
   color: white;
@@ -49,11 +53,11 @@
   text-decoration: none;
   transition: 0.25s;
 }
-.aboutme__personal a span {
+.aboutme__personal .nav__list-item-link span {
   position: inherit;
   z-index: 2;
 }
-.aboutme__personal a::after {
+.aboutme__personal .nav__list-item-link::after {
   position: absolute;
   left: 0;
   top: -100%;
@@ -64,7 +68,7 @@
   z-index: 1;
   transition: 0.4s ease all;
 }
-.aboutme__personal a:hover::after {
+.aboutme__personal .nav__list-item-link:hover::after {
   top: 0;
 }
 .aboutme__objectives {
@@ -82,6 +86,7 @@
 .aboutme__objectives li {
   margin: 10px 0;
   font-size: 1.5rem;
+  line-height: 2.1rem;
 }
 
 /*# sourceMappingURL=aboutme.css.map */
