--- a/styles/header.css
+++ b/styles/header.css
@@ -3,13 +3,13 @@
   padding: 25px;
   /* background-color: #1c1c1cdb; */
   background-color: rgba(0, 0, 0, 0.849);
-  position: relative;
   color: white;
 }
 .header__top {
   height: 60px;
   display: flex;
   justify-content: space-between;
+  top: 1px;
   align-items: center;
   transform: translateX(-300px);
   transition: 1s ease-in-out all;
