--- a/styles/aboutme.scss
+++ b/styles/aboutme.scss
@@ -1,24 +1,18 @@
 @import './variables.scss';
 
 .aboutme {
-  padding: 70px 50px 10px;
+  padding: 40px 50px;
   font-family: $fontMain;
-  display: flex;
   h2 {
-    border-left: 3px solid $main;
-    height: 35px;
-    display: flex;
-    align-items: center;
+    text-align: center;
     font-size: 2.6rem;
-    padding-left: 10px;
     letter-spacing: 1px;
-    color: $gray;
+    color: #34343480;
     font-family: $fontTitles;
+    margin-bottom: 20px;
   }
   &__description {
-    padding-right: 50px;
     line-height: 1.7rem;
-    width: 50%;
     color: $texts;
     opacity: 0;
     transform: translateX(-300px);
