--- a/styles/breakpoints/tablet.scss
+++ b/styles/breakpoints/tablet.scss
@@ -182,32 +182,18 @@
   }
   &__description {
     width: 100%;
-    padding: 20px 15px 0;
+    padding: 30px 15px 0;
     ul {
       padding: 0;
       li {
         font-size: 1.3rem;
         line-height: 2.3rem;
         margin: 15px 0;
-      }
-      a {
-        display: block;
-        width: 180px;
-        text-align: center;
-      }
-    }
-  }
-
-  &__objectives {
-    width: 100%;
-    padding: 30px 15px 0;
-    margin: 0;
-
-    ul {
-      padding: 0;
-      li {
-        font-size: 1.3rem;
-        line-height: 2.3rem;
+        a {
+          display: block;
+          width: 180px;
+          text-align: center;
+        }
       }
     }
   }
@@ -235,6 +221,10 @@
 
     .d {
       transition-delay: 1.5s;
+    }
+
+    .e {
+      transition-delay: 2s;
     }
   }
 }
