--- a/styles/habilities.css
+++ b/styles/habilities.css
@@ -41,6 +41,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
 }
 .habilities .a {
   transition-delay: 1.5s;
