--- a/styles/module.css
+++ b/styles/module.css
@@ -168,7 +168,7 @@ h4 {
   position: relative;
   overflow: hidden;
   color: white;
-  font-weight: 600;
+  font-weight: 400;
   background-color: #1c99fa;
   margin-right: 5px;
   font-size: 1.5rem;
@@ -177,6 +177,9 @@ h4 {
   display: inline-block;
   text-decoration: none;
   transition: 0.25s;
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
 }
 .aboutme__personal .nav__list-item-link span {
   position: inherit;
@@ -306,7 +309,7 @@ h4 {
   color: #34343480;
 }
 .projects__container {
-  padding: 40px 0;
+  padding: 30px 0;
 }
 .projects__item {
   display: flex;
@@ -352,7 +355,7 @@ h4 {
   position: relative;
   overflow: hidden;
   color: white;
-  font-weight: 600;
+  font-weight: 400;
   background-color: #1c99fa;
   margin-right: 5px;
   font-size: 1.5rem;
@@ -361,6 +364,9 @@ h4 {
   display: inline-block;
   text-decoration: none;
   transition: 0.25s;
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
 }
 .projects__item-description-buttons a span {
   position: inherit;
@@ -443,7 +449,7 @@ h4 {
   position: relative;
   overflow: hidden;
   color: white;
-  font-weight: 600;
+  font-weight: 400;
   background-color: #1c99fa;
   margin-right: 5px;
   font-size: 1.5rem;
@@ -452,6 +458,9 @@ h4 {
   display: inline-block;
   text-decoration: none;
   transition: 0.25s;
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
   font-weight: 600;
   margin-top: 5px;
   border: none;
