--- a/styles/breakpoints/tablet.scss
+++ b/styles/breakpoints/tablet.scss
@@ -143,20 +143,20 @@
     justify-content: center;
     position: absolute;
     bottom: 20px;
-    width: 100%;
+    right: 20px;
+    background-color: $main;
     justify-content: flex-end;
+    width: 70px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px;
+    font-size: 3rem;
 
     div {
-      background-color: #1c99faa6;
       margin-right: 20px;
       color: white;
-      width: 70px;
-      height: 70px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 100px;
-      font-size: 3rem;
       @include darkShadow();
     }
   }
@@ -190,10 +190,13 @@
         line-height: 2.3rem;
         margin: 15px 0;
         a {
-          display: block;
           width: 180px;
           text-align: center;
         }
+      }
+      li:last-child {
+        display: flex;
+        justify-content: center;
       }
     }
   }
@@ -231,12 +234,14 @@
 
 /*_______________Proyects________________*/
 .projects {
-  padding: 40px 20px 0;
+  padding: 50px 20px 0;
   &__container {
+    padding-top: 20px;
     padding-bottom: 0;
   }
   &__item {
     padding: 0;
+    margin-bottom: 30px;
     &-description {
       width: 100%;
       height: 100%;
