--- a/styles/contact.css
+++ b/styles/contact.css
@@ -51,7 +51,7 @@
   position: relative;
   overflow: hidden;
   color: white;
-  font-weight: 600;
+  font-weight: 400;
   background-color: #1c99fa;
   margin-right: 5px;
   font-size: 1.5rem;
@@ -60,6 +60,9 @@
   display: inline-block;
   text-decoration: none;
   transition: 0.25s;
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
   font-weight: 600;
   margin-top: 5px;
   border: none;
