--- a/styles/projects.css
+++ b/styles/projects.css
@@ -8,7 +8,7 @@
   color: #34343480;
 }
 .projects__container {
-  padding: 40px 0;
+  padding: 30px 0;
 }
 .projects__item {
   display: flex;
@@ -54,7 +54,7 @@
   position: relative;
   overflow: hidden;
   color: white;
-  font-weight: 600;
+  font-weight: 400;
   background-color: #1c99fa;
   margin-right: 5px;
   font-size: 1.5rem;
@@ -63,6 +63,9 @@
   display: inline-block;
   text-decoration: none;
   transition: 0.25s;
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
 }
 .projects__item-description-buttons a span {
   position: inherit;
