--- a/styles/header.css
+++ b/styles/header.css
@@ -76,6 +76,7 @@
   border-radius: 50%;
   margin-bottom: 15px;
   margin-top: -55px;
+  object-fit: cover;
 }
 .header__hero h1 {
   font-size: 4rem;
