--- a/styles/module.css
+++ b/styles/module.css
@@ -103,6 +103,7 @@ h4 {
   border-radius: 50%;
   margin-bottom: 15px;
   margin-top: -55px;
+  object-fit: cover;
 }
 .header__hero h1 {
   font-size: 4rem;
@@ -139,7 +140,7 @@ h4 {
   letter-spacing: 1px;
   color: #34343480;
   font-family: "Raleway", sans-serif;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 .aboutme__description {
   line-height: 1.7rem;
