--- a/styles/header.css
+++ b/styles/header.css
@@ -4,6 +4,7 @@
   /* background-color: #1c1c1cdb; */
   background-color: rgba(0, 0, 0, 0.849);
   color: white;
+  max-height: 620px;
 }
 .header__top {
   height: 60px;
@@ -59,6 +60,8 @@
   left: 0;
   z-index: -1;
   opacity: 0;
+  height: 100vh;
+  max-height: 620px;
 }
 .header__hero {
   height: 100%;
