--- a/styles/header.scss
+++ b/styles/header.scss
@@ -7,6 +7,7 @@
   background-color: rgba(0, 0, 0, 0.849);
   // position: relative;
   color: white;
+  max-height: 620px;
   &__top {
     height: 60px;
     display: flex;
@@ -67,6 +68,8 @@
     left: 0;
     z-index: -1;
     opacity: 0;
+    height: 100vh;
+    max-height: 620px;
   }
 
   &__hero {
