--- a/styles/module.css
+++ b/styles/module.css
@@ -31,6 +31,7 @@ h4 {
   /* background-color: #1c1c1cdb; */
   background-color: rgba(0, 0, 0, 0.849);
   color: white;
+  max-height: 620px;
 }
 .header__top {
   height: 60px;
@@ -86,6 +87,8 @@ h4 {
   left: 0;
   z-index: -1;
   opacity: 0;
+  height: 100vh;
+  max-height: 620px;
 }
 .header__hero {
   height: 100%;
@@ -157,7 +160,7 @@ h4 {
   padding-left: 5px;
 }
 .aboutme__personal li {
-  margin: 10px 0;
+  margin: 12px 0;
   font-size: 1.5rem;
   line-height: 2.1rem;
 }
